--- a/sisallys.ipynb
+++ b/sisallys.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:62534e5f69cfd4cabc9d2833ba68aadae440da25f86cf8f4ce8d1acbf167cb05"
+  "signature": "sha256:9069a06f455d574875c355b61057b2934dd01f5465b4ba7b7f6e0866c074bd98"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,6 +32,7 @@
       "    - Creation of arrays\n",
       "    - Array types and attributes\n",
       "    - Indexing, slicing and reshaping\n",
+      "        - a list as an index returns a 2d array, single index a 1d array\n",
       "    - Array concatenation and splitting\n",
       "    - Fast computation using universal functions\n",
       "    - Aggregations: max, min, sum, mean, standard deviation...\n",
@@ -39,10 +40,31 @@
       "    - Comparisons and masking\n",
       "    - Fancy indexing\n",
       "    - Sorting arrays\n",
+      "    - Matrix operations\n",
       "- Linalg (SciPy)\n",
       "- Pandas\n",
+      "    - Creation of series\n",
+      "    - Indexing rows of series\n",
+      "    - Creation of dataframes\n",
+      "    - Accessing columns of a dataframe. Results in\n",
+      "        - a series\n",
+      "        - a dataframe with n columns (n=0,1,2,...)\n",
+      "    - Other indexing and data selection\n",
+      "    - Missing data\n",
+      "    - Datasettien katenointi\n",
+      "    - Aggregaatiot ja ryhmittely\n",
+      "    - Merge\n",
+      "        \n",
       "- SciKit Learn\n",
       "- Projects"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Teht\u00e4vi\u00e4\n",
+      "- Mitk\u00e4 metodit ovat yhteisi\u00e4 dataframelle ja seriesille, ja mitk\u00e4 ovat erillisi\u00e4."
      ]
     }
    ],
