--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -327,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise 1 (linear regression)\n",
+    "#### <div class=\"alert alert-info\">Exercise 1 (linear regression)</div>\n",
     "Write a function `fit line` that gets one dimensional arrays `x` and `y` as parameters. The function should return the tuple `(slope, intercept)` of the fitted line. Write a main program that tests the `fit_line` function with some example arrays. The main function should produce output in the following form:\n",
     "\n",
     "Slope: 1.0<br/>\n",
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise 2 (mystery data)\n",
+    "#### <div class=\"alert alert-info\">Exercise 2 (mystery data)</div>\n",
     "Read the tab separated file mystery_data.tsv. Its first five columns define the features, and the last column is the response. Use scikit-learns's LinearRegression to fit this data. Implement function `mystery_data` that reads this file and learns and returns the regression coefficients for the five features. You don't have to fit the intercept. The main method will print output in the following form:\n",
     "\n",
     "Coefficient of X1 is ...<br/>\n",
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise 3 (coefficient of determination)\n",
+    "#### <div class=\"alert alert-info\">Exercise 3 (coefficient of determination)</div>\n",
     "Using the same data as in the previous exercise, instead of printing the regression coefficients, print the coefficient of determination. The coefficient of determination, denoted by R2, tells how well the linear regression fits the data. The maximum value of the coefficient of determination is 1. That means the best possible fit.\n",
     "\n",
     "Part 1.\n",
@@ -378,6 +378,13 @@
     "R2-score with feature(s) X5: ...\n",
     "\n",
     "How small can the R2-score be? Experiment both with fitting the intercept and without fitting the intercept."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\">Exercise 4 ()</div>"
    ]
   }
  ],
