--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -11,23 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Classification* is one form of supervised learning. The aim is to annotate all sample points with a label. Those points that have the same label belong to the same group. There can be two or more labels. For example, a lifeforms can be classified (coarsely) with labels animal, plant, fungi, archaea, bacteria, protozoa, and chromista. The sample points are observed to have certain features that can be used to predict their labels. For example, if it is has feathers, then it is most likely an animal.\n",
+    "*Classification* is one form of supervised learning. The aim is to annotate all data points with a label. Those points that have the same label belong to the same class. There can be two or more labels. For example, a lifeforms can be classified (coarsely) with labels animal, plant, fungi, archaea, bacteria, protozoa, and chromista. The data points are observed to have certain features that can be used to predict their labels. For example, if it is has feathers, then it is most likely an animal.\n",
     "\n",
-    "In supervised learning an algorithm is first given a training set of samples with their features and labels. Then the algorithm learns from these features and labels a (probabilistic) model, which can afterwards be used to predict the labels of previously unseen data.\n",
+    "In supervised learning an algorithm is first given a training set of data points with their features and labels. Then the algorithm learns from these features and labels a (probabilistic) model, which can afterwards be used to predict the labels of previously unseen data.\n",
     "\n",
     "*Naive Bayes classification* is a fast and simple to understand method. Its speed is due to some simplifications we make about the underlying probability distributions, namely, the assumption about the independence of features. Yet, it can be quite powerful, especially when there are enough features in the data.\n",
     "\n",
     "Suppose we have for each label L a probability distribution. This distribution gives probability for each possible combination of features (a feature vector):\n",
-    "$$P(features | L)$$\n",
-    "The main idea in Bayesian classification is to reverse the direction of dependence: we can predict the label based on the features:\n",
+    "$$P(features | L).$$\n",
+    "The main idea in Bayesian classification is to reverse the direction of dependence: we want to predict the label based on the features:\n",
     "$$P(L | features)$$\n",
     "This is possible by [the Bayes theorem](https://en.wikipedia.org/wiki/Bayes%27_theorem):\n",
     "$$P(L | features) = \\frac{P(features | L)P(L)}{P(features)}.$$\n",
     "\n",
-    "Let's assume we have to labels L1 and L2, and their associated distributions: $P(features | L1)$ and $P(features | L2)$. If we have a sample point with \"features\", whose label we don't know, we can try to predict it using the ratio of posterior probabilities:\n",
-    "$$\\frac{P(L1 | features)}{P(L2 | features)} = \\frac{P(features | L1)P(L1)}{P(features | L2)P(L2)}$$\n",
-    "If the ratio is greater than one, we label our data point with label L1, and if not we give it label L2.\n",
-    "The prior probabilities P(L1) and P(L2) of labels can easily found out from the input data, as for each data point we also have its label. Same goes for the probabilities of features conditioned on the label."
+    "Let's assume we have to labels L1 and L2, and their associated distributions: $P(features | L1)$ and $P(features | L2)$. If we have a data point with \"features\", whose label we don't know, we can try to predict it using the ratio of posterior probabilities:\n",
+    "$$\\frac{P(L1 | features)}{P(L2 | features)} = \\frac{P(features | L1)P(L1)}{P(features | L2)P(L2)}.$$\n",
+    "If the ratio is greater than one, we label our data point with label L1, and if not, we give it label L2.\n",
+    "The prior probabilities P(L1) and P(L2) of labels can be easily found out from the input data, as for each data point we also have its label. Same goes for the probabilities of features conditioned on the label."
    ]
   },
   {
@@ -177,6 +177,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Accuracy score* gives a measure about how well we managed to predict the labels. The maximum value is 1.0."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 329,
    "metadata": {},
@@ -204,10 +211,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These densities based on samples don't look good.\n",
     "#data1=np.random.multivariate_normal(model.theta_[0], np.identity(2)*model.sigma_[0], size=1000)\n",
     "#data1 = pd.DataFrame(data1, columns=['x','y'])\n",
     "#sns.kdeplot(data1.x, data1.y)"
@@ -218,6 +226,13 @@
    "metadata": {},
    "source": [
     "## Another example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's generate some more data using multivariate normal distributions."
    ]
   },
   {
@@ -332,6 +347,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even thought the score is quite good, we can see from the plot that the algorithm didn't have good models for the data. We can plot the models the algorithm used:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 335,
    "metadata": {},
@@ -368,6 +390,13 @@
    "metadata": {},
    "source": [
     "## Text classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We next try to classificate a set of messages that were posted on a public forum. The messages were divided into groups by the topics. So, we have a data set ready for classification testing. Let's first load this data using scikit-learn and print the message categories."
    ]
   },
   {
@@ -705,6 +734,7 @@
     "* use labels 0 for ham and 1 for spam\n",
     "* divide that feature matrix and the target label into training and test sets, using `train_test_split`\n",
     "* train a MultinomialNB model, and use it to predict the labels for the test set\n",
+    "\n",
     "The function should return a triple consisting of\n",
     "* accuracy score of the prediction\n",
     "* size of test sample\n",
