--- a/notes.ipynb
+++ b/notes.ipynb
@@ -7,7 +7,53 @@
     "# Tehtäviä\n",
     "- Mitkä metodit ovat yhteisiä dataframelle ja seriesille, ja mitkä ovat erillisiä.\n",
     "- Iän ja pituuden regressointi\n",
-    "- Tulosta tiedostoon taulukkomuotoista dataa, jossa esim. sarakkeet x, x**2 ja x**3, tai kertotaulut"
+    "- Tulosta tiedostoon taulukkomuotoista dataa, jossa esim. sarakkeet x, x**2 ja x**3, tai kertotaulut\n",
+    "- Tee timantti käyttäen eye, transpose ja merge/concat -funktioita"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- KFold:n parametrit ovat muuttuneet\n",
+    "- sklearn.cross_validation -> sklearn.model_selection\n",
+    "- self.assertTrue(mock.called) -> mock.assert_called()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hyvää github.io:n materiaaleissa\n",
+    "\n",
+    "* Tehtävät saa esiin/piilotettua\n",
+    "* lähdekoodin väritys\n",
+    "* infolaatikot\n",
+    "* koodiesimerkit -> tulostus\n",
+    "* \"kirjoita yllä oleva koodi kenttään\" (typonator)\n",
+    "* code_states_visualizer_widget toimii ilmeisesti vain javalla\n",
+    "* Kysymys? Vastaus. Preferred minimum number of words is ...\n",
+    "* vertaisarviointi\n",
+    "* crowd sourcing\n",
+    "* quiz\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Toiveita\n",
+    "\n",
+    "* Komentorivi-TMC voisi kysyä kuinka vaikea tehtävä oli mielestäsi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mietteitä\n",
+    "\n",
+    "* Pitääkö ohjelmien tarkistaa syötteiden järkevyys va voiko olettaa että syötteen ovat järkeviä. Jälkimmäinen vaihtoehto on Pythonmaisempi"
    ]
   }
  ],
