--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear regression\n",
+    "# Machine learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear regression\n",
     "Regression analysis tries to explain relationships between variables. One of these variables, called dependend variable, is what we want to \"explain\" using one or more *explanatory variables*. In linear regression we assume that the dependent variable can be, approximately, expressed as a linear combination of the explanatory variables. As a simple example, we might have dependent variable height and an explanatory variable age. The age of a person can quite well explain the height of a person, and this relationship is approximately linear for kids (ages between 1 and 16). Another way of thinking about regression is fitting a curve to the observed data points. If we have only one explanatory variable, then this is easy to visualize, as we shall see below.\n",
     "\n",
     "We can apply the linear regression easily with scikit-learn package. Let's go through some examples."
@@ -164,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple features"
+    "### Multiple features"
    ]
   },
   {
@@ -261,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Polynomial regression\n",
+    "### Polynomial regression\n",
     "It may perhaps come as a surprise that one can fit a polynomial curve to data points\n",
     "using linear regression. The trick is to add new explanatory variables to the model.\n",
     "Below we have a single feature x with associated y values given by third degree polynomial,\n",
@@ -327,14 +334,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ridge regression"
+    "### Ridge regression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression exercises"
+    "## Regression exercises"
    ]
   },
   {
