--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Naive Bayes classification"
+    "# Machine learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Naive Bayes classification"
    ]
   },
   {
@@ -225,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Another example"
+    "### Another example"
    ]
   },
   {
@@ -389,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Text classification"
+    "### Text classification"
    ]
   },
   {
@@ -760,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
