Added stuff about enumerate and zip

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -1329,10 +1329,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data structures\n",
+    "### Data structures\n",
     "The main data structures in Python are stringss, lists, tuples, dictionaries, and sets. We saw some examples of lists, when we discussed for loops. And we saw briefly tuples when we introduced argument packing and unpacking. Let's get into more details now.\n",
     "\n",
-    "### Sequences\n",
+    "#### Sequences\n",
     "A *list* contains arbitrary number of elements (even zero) that are stored in sequential order. The elements are separated by commas and written between brackets. The elements don't need to be of the same type. An example of a list with four values:"
    ]
   },
@@ -1602,7 +1602,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dictionaries\n",
+    "#### Zipping sequences\n",
+    "\n",
+    "The `zip` function combines two (or more) sequences into one sequence. If, for example, two sequences are zipped together, the resulting list contains pairs. In general, if `n` sequences are zipped together, the elements of the resulting list contains `n`-tuples. Here's an example of using the `zip` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On Monday it was rainy and the temperature was 10 degrees celsius.\n",
+      "On Tuesday it was rainy and the temperature was 12 degrees celsius.\n",
+      "On Wednesday it was sunny and the temperature was 12 degrees celsius.\n",
+      "On Thursday it was cloudy and the temperature was 9 degrees celsius.\n",
+      "On Friday it was rainy and the temperature was 9 degrees celsius.\n",
+      "On Saturday it was sunny and the temperature was 11 degrees celsius.\n",
+      "On Sunday it was sunny and the temperature was 11 degrees celsius.\n"
+     ]
+    }
+   ],
+   "source": [
+    "days=\"Monday Tuesday Wednesday Thursday Friday Saturday Sunday\".split()\n",
+    "weathers=\"rainy rainy sunny cloudy rainy sunny sunny\".split()\n",
+    "temperatures=[10,12,12,9,9,11,11]\n",
+    "for day, weather, temperature in zip(days,weathers,temperatures):\n",
+    "    print(\"On %s it was %s and the temperature was %i degrees celsius.\" % (day,weather,temperature))\n",
+    "\n",
+    "# Or equivalently, we following would be shorter:\n",
+    "#for t in zip(days,weathers,temperatures):\n",
+    "#    print(\"On %s it was %s and the temperature was %i degrees celsius.\" % t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the sequences are not of equal length, then the resulting sequence will be as long as the shortest input sequence is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Enumerating sequences\n",
+    "\n",
+    "In some other programming languages one iterates through the elements using their indices (0,1, ...) in the sequence. In Python we normally don't need to think about indices when iterating, because the for loop allows simpler iteration through the elements. But sometimes you really need to know the index of the current element in the sequence. In this this one uses Python's `enumerate` function. In the next example we would like find the second occurrence of integer 5 in a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "L=[1,2,98,5,-1,2,0,5,10]\n",
+    "counter = 0\n",
+    "for i, x in enumerate(L):\n",
+    "    if x == 5:\n",
+    "        counter += 1\n",
+    "        if counter == 2:\n",
+    "            break\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `enumerate(L)` function call can be thought to be equivalent to `zip(range(len(L)), L)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dictionaries\n",
     "A *dictionary* is a dynamic, unordered container. Instead of using integers to access the elements of the container, the dictionary uses *keys* to acces the stored *values*. The dictionary can be created by listing the comma separated key-value pairs in braces. Keys and values are separated by a colon. A tuple (key,value) is called an *item* of the dictionary.\n",
     "\n",
     "Let's demonstrate the dictionary creation and usage:"
@@ -1737,7 +1824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sets\n",
+    "#### Sets\n",
     "Set is a dynamic, unordered container. It works a bit like dictionary, but only the keys are stored. And each key can be stored only once. The set requires that the keys to be stored are hashable. Below are a few ways of creating a set:"
    ]
   },
@@ -1866,7 +1953,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Miscellaneous stuff\n",
+    "#### Miscellaneous stuff\n",
     "\n",
     "To find out whether a container includes an element, the `in` operator can be used. The operator returns a truth values. Some examples of the usage:"
    ]
@@ -2033,7 +2120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compact way of creating data structures\n",
+    "### Compact way of creating data structures\n",
     "We can now easily create complicated data structures using for loops:"
    ]
   },
@@ -2221,7 +2308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Processing sequences\n",
+    "### Processing sequences\n",
     "In this section we will go through some useful tool, are maybe familiar to you from some function programming language like *lisp* or *haskell*. These functions rely on functions being first-class objects in Python, that is, you can\n",
     "* pass a function as a parameter to another function\n",
     "* return a function as a return value from some function\n",
@@ -2234,7 +2321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Map and lambda functions\n",
+    "#### Map and lambda functions\n",
     "The `map` function gets a list and a function as parameters, and it returns a new list whose\n",
     "elements are elements of the original list transformed by the parameter function. For this to work the parameter must take exactly one parameter and return a value. An example will clarify this concept:"
    ]
@@ -2359,7 +2446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filter function\n"
+    "#### Filter function\n"
    ]
   },
   {
@@ -2401,7 +2488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The reduce function\n",
+    "#### The reduce function\n",
     "The `sum` function that returns the sum of a numeric list, can be though to reduce a list to a single element. It does this reduction by repeated applying the `+` operator until all the list elements are consumed. For instance, the list [1,2,3,4] is reduced by the expression `(((0+1)+2)+3)+4` of repeated applications of the `+` operator. We could implement this with the following function:"
    ]
   },
@@ -2720,7 +2807,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Examples\n",
+    "### Examples\n",
     "\n",
     "We have already seen that we can ask from a string str\n",
     "whether it begins with some substring as follows:\n",
@@ -2785,7 +2872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Patterns\n",
+    "### Patterns\n",
     "\n",
     "A pattern represents a set of strings. This set can even be\n",
     "potentially infinite.\n",
@@ -2864,7 +2951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Match and search functions\n",
+    "### Match and search functions\n",
     "\n",
     "We have so far only used the re.match function which tries\n",
     "to find a match at the beginning of a string\n",
@@ -3003,7 +3090,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions in the `re` module\n",
+    "### Functions in the `re` module\n",
     "\n",
     "Below is a list of the most common functions in the `re` module\n",
     "* re.match(pattern, str)\n",
@@ -3057,7 +3144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Match object\n",
+    "### Match object\n",
     "\n",
     "Functions `match`, `search`, and `finditer` use `match` objects\n",
     "to describe the found occurence.\n",
@@ -3107,7 +3194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Miscellaneous stuff\n",
+    "### Miscellaneous stuff\n",
     "\n",
     "If the same pattern is used in many function calls, it may be\n",
     "wise to precompile the pattern, mainly for efficiency reasons.\n",
@@ -3158,7 +3245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic file processing"
+    "## Basic file processing"
    ]
   },
   {
@@ -4186,7 +4273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
