--- a/basics.ipynb
+++ b/basics.ipynb
@@ -4073,7 +4073,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise X (word frequencies)</div>\n",
     "\n",
-    "Create function `word_frequencies` that gets a filename as a parameter and returns a dict with the word frequencies. In the dictionary the keys are the words and the corresponding values are the number of times that word occurred in the file specified by the function parameter. Read all the lines from the file and split the lines into words using the `split()` method. Further, remove punctuation from the words using the strip(',.:?!') method call.\n",
+    "Create function `word_frequencies` that gets a filename as a parameter and returns a dict with the word frequencies. In the dictionary the keys are the words and the corresponding values are the number of times that word occurred in the file specified by the function parameter. Read all the lines from the file and split the lines into words using the `split()` method. Further, remove punctuation from the words using the `strip('\"[],.:?!')` method call.\n",
     "\n",
     "Test this function in the main function using the file `alice.txt`. The output format should be like:"
    ]
@@ -4084,11 +4084,21 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise X (summary)</div>\n",
     "\n",
-    "Create a function called `summary` that gets a filename as a command line parameter. The input\n",
+    "Create a function called `summary` that gets a filename as a parameter. The input\n",
     "file should contain a floating point number on each line of the file. Make your program read these\n",
-    "numbers and then a triple containing the average, sum, and standard deviation of these numbers for the file.\n",
-    "If some line doesn’t represent a number, you can just ignore that line.\n",
+    "numbers and then return a triple containing the sum, average, and standard deviation of these numbers for the file.\n",
+    "As a remainder, the formula for corrected sample standard deviation is\n",
+    "\\\\(\\sqrt{\\frac{\\sum_{i=1}^n (x_i - \\overline x)^2}{n-1}}\\\\),\n",
+    "where $\\overline x$ is the average.\n",
     "\n",
+    "If some line doesn’t represent a number, you can just ignore that line. You can achieve this with the *try-except* block. An example of recovering from an exceptional situation:\n",
+    "```python\n",
+    "try:\n",
+    "    x = float(line)\n",
+    "except ValueError:\n",
+    "    # Statements in here are executed when the above conversion fails\n",
+    "```\n",
+    "We will cover more about exceptions later in the course.\n",
     "The `main` function should call the function summary for each filename in the list `sys.argv[1:]` of command line parameters.\n",
     "\n",
     "Example of usage from the command line:\n",
@@ -4097,7 +4107,13 @@
     "`python3 summary.py example.txt example2.txt`\n",
     "if you are in the folder src.\n",
     "\n",
-    "The output should look like"
+    "The output should look like this:\n",
+    "```\n",
+    "File: src/example.txt Sum: 51.400000 Average: 10.280000 Stddev: 8.904606\n",
+    "File: src/example2.txt Sum: 5446.200000 Average: 1815.400000 Stddev: 3124.294045\n",
+    "```\n",
+    "\n",
+    "MODIFY THIS SO THAT EXCEPTION HANDLING IS PART 2."
    ]
   },
   {
@@ -4131,8 +4147,8 @@
     "\n",
     "Part 1.\n",
     "\n",
-    "Write function `file_extensions` that gets as a parameter a *file object* (not a filename).\n",
-    "It should read through the lines from this file object. Each line contains a filename.\n",
+    "Write function `file_extensions` that gets as a parameter a filename.\n",
+    "It should read through the lines from this file. Each line contains a filename.\n",
     "Find the extension for each filename. The function should return a pair, where the\n",
     "first element is a list containing all filenames with no extension (no period (.) appears in the filename).\n",
     "The second element of the pair is a dictionary with extensions as keys and corresponding values are lists with filenames having that extension.\n",
@@ -4151,7 +4167,7 @@
     "\n",
     "Part 2.\n",
     "\n",
-    "Write a main method that opens the file `src/filenames.txt` and calls the `file_extensions` function with the opened file as the argument. Then output a line for each extension with the number of files with that extension.\n",
+    "Write a main method that calls the `file_extensions` function with \"src/filenames.txt\" as the argument. Then output a line for each extension with the number of files with that extension.\n",
     "With the example in part 1, the output should be\n",
     "```\n",
     "1 files with no extension\n",
@@ -4159,7 +4175,7 @@
     "pdf 1\n",
     "txt 2\n",
     "```\n",
-    "Had there been no filenames without extension then the first line would have been `0 files with no extension`. In the printout list the extensions in alphabetical order. Make sure that the file you opened gets closed before the `main` function exits."
+    "Had there been no filenames without extension then the first line would have been `0 files with no extension`. In the printout list the extensions in alphabetical order."
    ]
   },
   {
@@ -4841,7 +4857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
