Added more stuff to numpy

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -4531,7 +4531,8 @@
     "|`__add__` | addition (+) |\n",
     "|`__sub__` | subtraction (-) |\n",
     "|`__mul__` | multiplication (*) |\n",
-    "|`__div__` | division (/) |\n",
+    "|`__truediv__` | division (/) |\n",
+    "|`__floordiv__` | division (//) |\n",
     "-----------------------\n",
     "\n",
     "The corresponding augmented assignments += -= *= /=\n",
@@ -4857,7 +4858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
