--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,28 +165,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly `ones` initializes all elements to one, and `empty` leaves the elements uninitialized:"
+    "Similarly `ones` initializes all elements to one, `full` initializes all elements to a specified value, and `empty` leaves the elements uninitialized:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 1., 1.],\n",
-       "       [1., 1., 1.]])"
+       "array([[ 1.,  1.,  1.],\n",
+       "       [ 1.,  1.,  1.]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.ones((2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7, 7, 7],\n",
+       "       [7, 7, 7]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full((2,3), fill_value=7)"
    ]
   },
   {
@@ -216,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `eye` function create the identity matrix, that is, a matrix with elements on the diagonal are set to one, and non-diagonal elements are set to zero:"
+    "The `eye` function creates the identity matrix, that is, a matrix with elements on the diagonal are set to one, and non-diagonal elements are set to zero:"
    ]
   },
   {
@@ -247,14 +268,598 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Array types and attributes"
+    "The `arange` function works like the `range` function, but produces an array instead of a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 4, 6, 8])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0,10,2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Indexing, slicing and reshaping\n",
+    "For non-integer ranges it is better to use `linspace`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.78539816,  1.57079633,  2.35619449,  3.14159265])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0, np.pi, 5)  # Evenly spaced range with 5 elements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With `linspace` one does not have compute the length of the step, but instead one specifies the wanted number of elements. By default, the endpoint is included in the result, unlike with `arange`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arrays with random elements\n",
+    "\n",
+    "To test our programs we might use real data as input. However, real data is not always available, and it may take time to gather. We could instead generate random numbers to use as substitute. They can be generated really easily with NumPy, and can be sampled from several different distribution, of which we mention below only a few. Random data can simulate real data better than, for example, ranges or constant arrays. Sometimes we also need random numbers in our programs to choose a subset of real data. NumPy can easily produces arrays of wanted shape filled with random numbers. Below are few examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.36371077,  0.57019677,  0.43860151,  0.98837384],\n",
+       "       [ 0.10204481,  0.20887676,  0.16130952,  0.65310833],\n",
+       "       [ 0.2532916 ,  0.46631077,  0.24442559,  0.15896958]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random((3,4))          # Elements are uniformly distributed from half-open interval [0.0,1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.08789642, -0.60484571, -0.3100596 , -0.29957746],\n",
+       "       [-0.4185277 ,  1.40676248, -0.31368845,  0.73533905],\n",
+       "       [ 0.67562055,  0.10291608,  0.76654546,  0.3266169 ]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.normal(0, 1, (3,4))    # Elements are normally distributed with mean 0 and standard deviation 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6,  3,  9,  8],\n",
+       "       [ 9, -1,  2,  1],\n",
+       "       [ 7,  7,  5,  4]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(-2, 10, (3,4))  # Elements are uniformly distributed integers from the half-open interval [-2,10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes it is useful to be able to recreate exactly the same data in every run of our program. For example, if there is a bug in our program, which manifests itself only with certain input, then to debug our program it needs to behave deterministically. We can create random numbers deterministically, if we always start from the same starting point. This starting point is usually an integer, and we call it a *seed*. Example of use:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[44 47 64 67 67  9 83 21 36 87]\n",
+      "[ 1.26611853 -0.50587654  2.54520078  1.08081191  0.48431215  0.57914048\n",
+      " -0.18158257  1.41020463 -0.37447169  0.27519832]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "print(np.random.randint(0, 100, 10))\n",
+    "print(np.random.normal(0, 1, 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you run the above cell multiple times, it will always give the same number, unlike the earlier examples. Try rerunning them now!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The call to `np.random.seed` initializes the *global* random number generator. The calls `np.random.random`, `np.random.normal`, etc all use this global random number generator. It is however possible to generate new random number generators, and use those to sample random numbers from a distribution. Example on usage:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([66, 92, 98, 17, 83, 57, 86, 97, 96, 47])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_generator = np.random.RandomState(seed=123)  # RandomState is a class, so we give the seed to its constructor\n",
+    "new_generator.randint(0, 100, 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will see these used later in the materials and in the exercises, just so we can agree what the random input data is. How else could we agree whether result is correct or not, if we can't agree what the input is!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Array types and attributes\n",
+    "\n",
+    "An array has several attributes: ndim tells the number of dimensions, shape tells the size in each dimension, size tells the number of elements, and dtype tells the element type. Let's create a helper function to explore these attributes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def info(name, a):\n",
+    "    print(\"%s has dim %i, shape %s, size %i, and dtype %s:\" % (name, a.ndim, a.shape, a.size, a.dtype))\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b has dim 2, shape (2, 3), size 6, and dtype int64:\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.array([[1,2,3], [4,5,6]])\n",
+    "info(\"b\", b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c has dim 3, shape (2, 2, 3), size 12, and dtype int64:\n",
+      "[[[1 2 3]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=np.array([b, b])          # Creates a 3-dimensional array\n",
+    "info(\"c\", c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d has dim 2, shape (1, 4), size 4, and dtype int64:\n",
+      "[[1 2 3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=np.array([[1,2,3,4]])                # a row vector\n",
+    "info(\"d\", d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing, slicing and reshaping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indexing\n",
+    "One dimensional array behaves like the list in Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.array([1,4,2,7,9,5])\n",
+    "print(a[1])\n",
+    "print(a[-2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For multi-dimensional array the index is a comma separated tuple instead of a single integer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "6\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.array([[1,2,3], [4,5,6]])\n",
+    "print(b)\n",
+    "print(b[1,2])    # row index 1, column index 2\n",
+    "print(b[0,-1])   # row index 0, column index -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10  2  3]\n",
+      " [ 4  5  6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# As with lists modification through indexing is possible\n",
+    "b[0,0] = 10\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Slicing\n",
+    "Slicing works similarly to lists, but now we can have slice in different dimensions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 2 7 9 5]\n",
+      "[4 2]\n",
+      "[5 9 7 2 4 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n",
+    "print(a[1:3])\n",
+    "print(a[::-1])    # Reverses the array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10  2  3]\n",
+      " [ 4  5  6]]\n",
+      "[10  4]\n",
+      "[10  2  3]\n",
+      "[[2 3]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b)\n",
+    "print(b[:,0])\n",
+    "print(b[0,:])\n",
+    "print(b[:,1:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can even assign to a slice:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10  7  7]\n",
+      " [ 4  7  7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b[:,1:] = 7\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A common idiom is to extract rows or columns from an array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10  4]\n",
+      "[4 7 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b[:,0])    # First column\n",
+    "print(b[1,:])    # Second row"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reshaping\n",
+    "\n",
+    "When an array is reshaped, its number of elements stays the same, but they are reinterpreted to have a different shape. An example of this is to interpret a one dimensional array as two dimension array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anew has dim 2, shape (3, 3), size 9, and dtype int64:\n",
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n",
+      "a has dim 1, shape (9,), size 9, and dtype int64:\n",
+      "[0 1 2 3 4 5 6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(9)\n",
+    "anew=a.reshape(3,3)\n",
+    "info(\"anew\", anew)\n",
+    "info(\"a\", a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d has dim 1, shape (4,), size 4, and dtype int64:\n",
+      "[0 1 2 3]\n",
+      "dr has dim 2, shape (1, 4), size 4, and dtype int64:\n",
+      "[[0 1 2 3]]\n",
+      "dc has dim 2, shape (4, 1), size 4, and dtype int64:\n",
+      "[[0]\n",
+      " [1]\n",
+      " [2]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=np.arange(4)             # 1d array\n",
+    "dr=d.reshape(1,4)          # row vector\n",
+    "dc=d.reshape(4,1)          # column vector\n",
+    "info(\"d\", d)\n",
+    "info(\"dr\", dr)\n",
+    "info(\"dc\", dc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "Note the 1d array and the row and column vectors, which are 2d arrays, are fundamentally different objects, even though they look similar. They behave differently when we combine or otherwise operate arrays of different shapes, as we shall see in the next section and later in this material.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An alternative syntax to create, for example, column or row vectors is through the `np.newaxis` keyword. Sometimes this is more easier or natural than with the reshape method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d has dim 1, shape (4,), size 4, and dtype int64:\n",
+      "[0 1 2 3]\n",
+      "drow has dim 2, shape (4, 1), size 4, and dtype int64:\n",
+      "[[0]\n",
+      " [1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "drow has dim 2, shape (1, 4), size 4, and dtype int64:\n",
+      "[[0 1 2 3]]\n",
+      "dcol has dim 2, shape (4, 1), size 4, and dtype int64:\n",
+      "[[0]\n",
+      " [1]\n",
+      " [2]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "info(\"d\", d)\n",
+    "info(\"drow\", d[:, np.newaxis])\n",
+    "info(\"drow\", d[np.newaxis, :])\n",
+    "info(\"dcol\", d[:, np.newaxis])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### a list as an index returns a 2d array, single index a 1d array"
    ]
   },
@@ -593,7 +1198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
