Added more stuff to basics

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -399,6 +399,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A *byte* can represent numbers between 0 and 255. A byte consists of 8 *bits*, which can in turn represent either 0 or 1. All the data that is stored on disks or transmitted across the internet are sequences of bytes. Normally we don't have to care about bytes, since our strings and other variables are automatically converted to a sequence of bytes when needed to. An example of the correspondence between the usual data types and bytes is the characters in a string. A single character is encoded as a sequence of one or more bytes. For example, in the common [UTF-8](https://en.wikipedia.org/wiki/UTF-8) encoding the character `c` corresponds to the byte with integer value 99 and the character `ä` corresponds to sequence of bytes [195, 164]. An example conversion between characters and bytes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\xc3\\xa4'\n",
+      "[195, 164]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=\"ä\".encode(\"utf-8\")     # Convert character(s) to a sequence of bytes\n",
+    "print(b)                  # Prints bytes in hexadecimal notation\n",
+    "print(list(b))            # Prints bytes in decimal notation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ä'"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bytes.decode(b, \"utf-8\")  # convert sequence of bytes to character(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "During this course we don't have to care much about bytes, but in some cases, when loading data sets, we might have to specify the encoding if it deviates from the default one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Creating strings\n",
     "A string is a sequence of characters commonly used to store input or output data in a program. The characters of a string are specified either between single (') or double (\") quotes. This optionaly is useful if a string needs to contain a quotation mark:\n",
     "\"I don't want to go!\". You can also achieve this by *escaping* the quotation mark with the backslash: 'I don\\'t want to go'.\n",
@@ -3223,6 +3277,7 @@
     "* `random`\n",
     "* `os`\n",
     "* `sys`\n",
+    "\n",
     "Any file with extension `.py` that contains Python source code\n",
     "is a module. So, no special notation is needed to create a module.\n",
     "\n",
@@ -3906,7 +3961,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above the two bytes were expressed as hexadecimals. In decimal notation they would be 195 and 164. (Both in the range from 0 to 255.) What is the utf-8 encoding of the letter `'a'`?\n",
+    "Above the two bytes were expressed as hexadecimals. In decimal notation they would be 195 and 164. (Both in the range from 0 to 255.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[195, 164]"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(\"ä\".encode(\"utf-8\"))              # Show as a list of integers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the utf-8 encoding of the letter `'a'`?\n",
     "\n",
     "During this course we will only consider files containing text, so the default text mode is fine for us."
    ]
@@ -4071,6 +4153,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## sys module\n",
+    "\n",
+    "We saw above that the `sys` module contains the three file objects `sys.stdin`, `sys.stdout`, and `sys.stderr`. It has also few other useful attributes. The attribute `sys.path` is the list of folders that Python uses to look for imported modules. The list `sys.argv` contains the so called *command line parameters*. For example in Linux if you are using the terminal, then you can run your program with the command `python3 programname.py param1 param2 ...`. After Python has started your program, the command line parameters are visible as follows. The name of the program is in `sys.argv[0]`. The rest of the command line parameters are after the program name in this list: `sys.argv[1]==\"param1\"`, `sys.argv[2]==\"param2\"`, and so on. The command line parameters can be useful in adjusting the behaviour of your program. A few examples of these will be in the following exercises. (The terminal window is a textual interface to your computer instead of the usual graphical interface.)\n",
+    "\n",
+    "The function `sys.exit` can be used to exit immediately your program. The integer parameter given to this function is the return value of the program. Usually the return value 0 means that the program ran successfully, and non-zero integer means that an error occurred. This return value is accessible from the terminal window from where you started the program."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### <div class=\"alert alert-info\">Exercise X (word frequencies)</div>\n",
     "\n",
     "Create function `word_frequencies` that gets a filename as a parameter and returns a dict with the word frequencies. In the dictionary the keys are the words and the corresponding values are the number of times that word occurred in the file specified by the function parameter. Read all the lines from the file and split the lines into words using the `split()` method. Further, remove punctuation from the words using the `strip('\"[],.:?!')` method call.\n",
@@ -4084,22 +4177,14 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise X (summary)</div>\n",
     "\n",
+    "Part 1.\n",
+    "\n",
     "Create a function called `summary` that gets a filename as a parameter. The input\n",
     "file should contain a floating point number on each line of the file. Make your program read these\n",
     "numbers and then return a triple containing the sum, average, and standard deviation of these numbers for the file.\n",
     "As a remainder, the formula for corrected sample standard deviation is\n",
     "\\\\(\\sqrt{\\frac{\\sum_{i=1}^n (x_i - \\overline x)^2}{n-1}}\\\\),\n",
     "where $\\overline x$ is the average.\n",
-    "\n",
-    "If some line doesn’t represent a number, you can just ignore that line. You can achieve this with the *try-except* block. An example of recovering from an exceptional situation:\n",
-    "```python\n",
-    "try:\n",
-    "    x = float(line)\n",
-    "except ValueError:\n",
-    "    # Statements in here are executed when the above conversion fails\n",
-    "```\n",
-    "We will cover more about exceptions later in the course.\n",
-    "The `main` function should call the function summary for each filename in the list `sys.argv[1:]` of command line parameters.\n",
     "\n",
     "Example of usage from the command line:\n",
     "`python3 src/summary.py src/example.txt src/example2.txt`\n",
@@ -4113,7 +4198,17 @@
     "File: src/example2.txt Sum: 5446.200000 Average: 1815.400000 Stddev: 3124.294045\n",
     "```\n",
     "\n",
-    "MODIFY THIS SO THAT EXCEPTION HANDLING IS PART 2."
+    "Part 2.\n",
+    "\n",
+    "If some line doesn’t represent a number, you can just ignore that line. You can achieve this with the *try-except* block. An example of recovering from an exceptional situation:\n",
+    "```python\n",
+    "try:\n",
+    "    x = float(line)                 # The float constructor raises ValueError exception if conversion is no possible\n",
+    "except ValueError:\n",
+    "    # Statements in here are executed when the above conversion fails\n",
+    "```\n",
+    "We will cover more about exceptions later in the course.\n",
+    "The `main` function should call the function summary for each filename in the list `sys.argv[1:]` of command line parameters."
    ]
   },
   {
