--- a/pca.ipynb
+++ b/pca.ipynb
@@ -334,7 +334,7 @@
     "\n",
     "Part 1.\n",
     "\n",
-    "Write function explained_variance which reads the tab separated file \"data.tsv\". It should return two lists (or 1D arrays). Then first list contains the variances of all the features. The fit PCA to the data. The second list should consist of the explained variances returned by the PCA.\n",
+    "Write function explained_variance which reads the tab separated file \"data.tsv\". It should return two lists (or 1D arrays). Then first list contains the variances of all the features. Then fit PCA to the data. The second list should consist of the explained variances returned by the PCA.\n",
     "\n",
     "In the main function print these values in the following form:\n",
     "```\n",
@@ -365,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
